# Proj_SnakeGame

./: CMakeLists.txt  Makefile  README.md  draw.cpp  game_over.cpp  game_start.cpp  gate.cpp  handle.cpp  initPortals.cpp  init_portals.cpp  init_state.cpp  main.cpp  main1  main1.cpp  makefile  map  map.cpp  move_snake.cpp  run  snake_game  stage.cpp  왕긴코드
header/: snake_game.h
map1/: draw.cpp
ncurses-6.2/: Makefile  config.status  edit_man.sh
ncurses-6.2/c++/: Makefile  demo
ncurses-6.2/man/: Makefile
ncurses-6.2/misc/: Makefile
ncurses-6.2/ncurses/: Makefile  make_hash  report_offsets
ncurses-6.2/progs/: Makefile  clear  infocmp  tabs  tic  toe  tput  tset
ncurses-6.2/test/: Makefile  background  blue  bs  cardfile  chgat  clip_printw  color_content  color_set  demo_altkeys  demo_defkey  demo_forms  demo_keyok  demo_menus  demo_new_pair  demo_panels  demo_tabs  demo_termcap  demo_terminfo  ditto  dots  dots_curses  dots_mvcur  dots_termcap  echochar  filter  firework  firstlast  foldkeys  form_driver_w  gdc  hanoi  hashtest  inch_wide  inchs  insdelln  inserts  keynames  knight  list_keys  (+29 more)
snakeGame/: draw.cpp  game_over.cpp  game_start.cpp  handle.cpp  init_portals.cpp  move_snake.cpp  run  stage.cpp
snakeGame/header/: snake_game.h
test/: draw.cpp  snake_game.h
